2009-11-14  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-single-version): Remove, unused.

	* simple.el (x-selection-owner-p): Declare.
	(read-mail-command): Use custom radio type rather than choice.
	(completion-no-auto-exit): Doc fix.

	* custom.el (defgroup):
	* epg-config.el (epg):
	* ps-print.el (postscript): Doc fixes.

2009-11-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* bindings.el (mode-line-buffer-identification): Purecopy only the string.
	* international/ccl.el (define-ccl-program): Do not purecopy the
	docstring, defconst does it anyway.

2009-11-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* add-log.el (add-change-log-entry): Avoid displaying the changelog
	a second time.

	* x-dnd.el (x-dnd-maybe-call-test-function):
	* window.el (split-window-vertically):
	* whitespace.el (whitespace-help-on):
	* vc-rcs.el (vc-rcs-consult-headers):
	* userlock.el (ask-user-about-lock-help)
	(ask-user-about-supersession-help):
	* type-break.el (type-break-force-mode-line-update):
	* time-stamp.el (time-stamp-conv-warn):
	* terminal.el (te-set-output-log, te-more-break, te-filter)
	(te-sentinel,terminal-emulator):
	* term.el (make-term, term-exec, term-sentinel, term-read-input-ring)
	(term-write-input-ring, term-check-source, term-start-output-log):
	(term-display-buffer-line, term-dynamic-list-completions):
	(term-ansi-make-term, serial-term):
	* subr.el (selective-display):
	* strokes.el (strokes-xpm-to-compressed-string, strokes-decode-buffer)
	(strokes-encode-buffer, strokes-xpm-for-compressed-string):
	* speedbar.el (speedbar-buffers-tail-notes, speedbar-buffers-item-info)
	(speedbar-reconfigure-keymaps, speedbar-add-localized-speedbar-support)
	(speedbar-remove-localized-speedbar-support)
	(speedbar-set-mode-line-format, speedbar-create-tag-hierarchy)
	(speedbar-update-special-contents, speedbar-buffer-buttons-engine)
	(speedbar-buffers-line-directory):
	* simple.el (shell-command-on-region, append-to-buffer)
	(prepend-to-buffer):